--- a/assets/scss/utility/_reset.scss
+++ b/assets/scss/utility/_reset.scss
@@ -77,13 +77,28 @@ abbr[title] {
 body {
     font-family: BRegular;
 }
-// body::-webkit-scrollbar-track {
-//     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-// }
-// body::-webkit-scrollbar-thumb {
-//     background-color: darkgrey;
-//     outline: 1px solid slategrey;
-// }
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+    height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #858d9d;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #0033a1;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #0033a1;
+}
 
 main {
     background-color: #f2f3f4;
@@ -155,8 +170,4 @@ main {
     justify-content: center;
     border-radius: 50%;
     background-color: #fff;
-}
-
-::-webkit-scrollbar-thumb {
-    background: red;
 }
